# voz-company-crawler

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/skills/dagster-expert/: SKILL.md
docker/dev/: Dockerfile  Dockerfile.dagster-host  dagster.docker.yaml  docker-compose.yml  pgadmin_servers.json  workspace.docker.yaml
docker/dev/sql/: init.sql
docs/: README.md  design-decisions.md
docs/brainstorm/: 20260406-1829--company-identity-model.md  20260406-1829--data-model-reorganization.md  20260406-1829--post-enrichment-pipeline.md  20260406-1829--quote-parser-audit.md  20260418-0134--per-thread-factory-pipeline.md
docs/features/: company-identity.md  crawl-pipeline.md  data-model.md  enrichment-pipeline.md  reply-graph.md
docs/investigations/: sensor_investigation_sync_posts_to_arango.md
docs/superpowers/plans/: 2026-04-03-core-refactor.md
docs/superpowers/specs/: 2026-04-03-core-refactor-design.md
notebooks/: explore-graph.ipynb
scripts/: test_arango.py  test_neo4j.py
tests/: conftest.py
tests/core/crawl/: test_fetcher.py
tests/core/db/: test_postgres.py
tests/core/graph/: test_client.py  test_company_resolution.py  test_edge_sync.py  test_embedding_sync.py  test_normalizer.py  test_post_sync.py  test_quote_parser.py  test_sync.py
tests/core/llm/: test_embeddings.py
tests/core/repository/: conftest.py  test_graph_repository.py  test_neo4j_repository.py  test_protocol_conformance.py  test_raw_repository.py
tests/integration/: conftest.py
tests/integration/repository/: test_arango_repository_integration.py  test_full_sync_flow.py  test_graph_repository_integration.py  test_neo4j_repository_integration.py
tests/resources/: test_arango_resource.py
tests/smoke/: smoke_arango.py
tests/utils/: test_arango_setup.py  test_graph_retrieval.py  test_html_parser.py
voz_crawler/: definitions.py
voz_crawler/core/: __init__.py
voz_crawler/core/crawl/: __init__.py  fetcher.py  parser.py  source.py
voz_crawler/core/db/: __init__.py  postgres.py  posts.py
voz_crawler/core/entities/: __init__.py  arango.py  company.py  enrichment.py  graph.py  parsed_post.py  raw_post.py
voz_crawler/core/graph/: __init__.py  arango_setup.py  client.py  company_resolution.py  company_sync.py  edge_sync.py  embedding_sync.py  enrichment_sync.py  implicit_reply_sync.py  normalizer.py  post_sync.py  quote_parser.py  retrieval.py  schema.py  sync.py
voz_crawler/core/llm/: __init__.py  embeddings.py
voz_crawler/defs/: __init__.py  partitions.py
voz_crawler/sources/: voz_thread.py
voz_crawler/utils/: arango_setup.py  graph_retrieval.py  pagination.py
(+40 files in other folders)
