[project]
name = "voz-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dbt",
    "dlt[postgres]>=1.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml",
    "openai>=1.0",
    "dagster-dlt>=0.28.19",
    "dagster-postgres>=0.28.19",
    "dagster-docker>=0.28.19",
    "python-arango>=8.0",
    "dagster-openai",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.38",
]

[project.optional-dependencies]
dev = []

[tool.dagster]
module_name = "voz_crawler.definitions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "python-dotenv>=1.0",
    "ipykernel>=6.0",
    "mypy",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires running ArangoDB Docker service",
    "smoke: end-to-end sanity checks against live services",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
